#####  GLFW build options

#@ Build options
option('build-docs'
      , type : 'boolean'
      , value : false
      , description : 'Build GLFW documentation?')
option('build-tests'
      , type : 'boolean'
      , value : false
      , description : 'Build GLFW test programs?')
option('build-examples'
      , type : 'boolean'
      , value : false
      , description : 'Build GLFW example programs?')
option('install'
      , type : 'boolean'
      , value : false
      , description : 'Install GLFW?')

#@ Configuration options
option('display-api'
      , type : 'combo'
      , choices : ['OSMesa', 'X11', 'Wayland', 'Win32', 'Cocoa']
      , value : 'X11'
      , description : 'Choose backend display API.')
