#####  GLFW build options

#@ Build options
option('docs',
        type : 'boolean',
        value : false,
        description : 'Build GLFW documentation?')
option('tests',
        type : 'boolean',
        value : false,
        description : 'Build GLFW test programs?')
option('examples',
        type : 'boolean',
        value : false,
        description : 'Build GLFW example programs?')
option('install',
        type : 'boolean',
        value : false,
        description : 'Install GLFW?')

#@ Configuration options
option('display-api',
        type : 'combo',
        choices : ['osmesa', 'x11', 'wayland', 'win32', 'cocoa'],
        value : 'x11',
        description : 'Choose backend display API.')
option('vulkan-static',
        type : 'boolean',
        value : false,
        description : 'Linking Vulkan loader directly with application?')
